Optimized, final bug fixes, ran Android Lint. Done!