@@ -5,7 +5,6 @@ import android.database.Cursor;
 import android.net.Uri;
 import android.os.Bundle;
 import android.text.TextUtils;
-import android.util.Log;
 import android.view.LayoutInflater;
 import android.view.View;
 import android.view.ViewGroup;
@@ -19,8 +18,8 @@ import com.cmu.scout.ui.MatchPagerActivity;
 
 public class MatchInputTeleOpFragment extends MatchFragment {
 	
-	private static final String TAG = "MatchInputTeleOpFragment";
-	private static final boolean DEBUG = true;
+//	private static final String TAG = "MatchInputTeleOpFragment";
+//	private static final boolean DEBUG = true;
 	
 	private EditText mHighCounter;
 	private EditText mHighMissCounter; 
@@ -62,13 +61,13 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 	};
 	
 	public static MatchInputTeleOpFragment newInstance() {
-		if (DEBUG) Log.v(TAG, "newInstance()");
+//		if (DEBUG) Log.v(TAG, "newInstance()");
 	    return new MatchInputTeleOpFragment();
 	}
 
 	@Override
 	public View onCreateView(LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
-		if (DEBUG) Log.v(TAG, "++ ON CREATE VIEW ++");
+//		if (DEBUG) Log.v(TAG, "++ ON CREATE VIEW ++");
 		/*
 		if (savedInstanceState != null) {		
 			mHighMadeInit = savedInstanceState.getInt(HIGH_MADE_STORAGE_KEY);
@@ -115,7 +114,7 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 	
 	@Override
 	public void updateDisplay(int viewId) {
-		if (DEBUG) Log.v(TAG, "updateDisplay()");
+//		if (DEBUG) Log.v(TAG, "updateDisplay()");
 
 		switch(viewId) {
 		case R.id.BT_Shots_Hit_High:
@@ -147,7 +146,7 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 	
 	@Override
 	public void saveData() {
-		if (DEBUG) Log.v(TAG, "saveData()");
+//		if (DEBUG) Log.v(TAG, "saveData()");
 		
 		int teamId = ((MatchPagerActivity)getActivity()).getTeamId();
 		int matchId = ((MatchPagerActivity)getActivity()).getMatchId();
@@ -208,7 +207,7 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 	
 	@Override
 	public void loadData() {
-		if (DEBUG) Log.v(TAG, "loadData()");
+//		if (DEBUG) Log.v(TAG, "loadData()");
 		
 		int teamId = ((MatchPagerActivity)getActivity()).getTeamId();
 		int matchId = ((MatchPagerActivity)getActivity()).getMatchId();
@@ -236,7 +235,7 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 
 	@Override
 	public void clearScreen() {
-		if (DEBUG) Log.v(TAG, "clearScreen()");
+//		if (DEBUG) Log.v(TAG, "clearScreen()");
 
 		mHighCounter.setText(R.string.zero);
 		mHighMissCounter.setText(R.string.zero);
@@ -248,7 +247,7 @@ public class MatchInputTeleOpFragment extends MatchFragment {
 	
     public void incCount(EditText et){
     	String scoreStr = et.getText().toString();
-		int score = (scoreStr == null || scoreStr.length() == 0) ? 0 : new Integer(scoreStr);
+		int score = (scoreStr == null || scoreStr.length() == 0) ? 0 : Integer.valueOf(scoreStr);
 		score = Math.min(score+1, MatchPagerActivity.MAX_SCORE);
 		et.setText("" + score);
     }
