@@ -5,6 +5,7 @@ import java.io.IOException;
 import java.text.SimpleDateFormat;
 import java.util.Date;
 
+import android.annotation.TargetApi;
 import android.app.Activity;
 import android.app.AlertDialog;
 import android.content.ContentValues;
@@ -18,7 +19,6 @@ import android.net.Uri;
 import android.os.AsyncTask;
 import android.os.Bundle;
 import android.provider.MediaStore;
-import android.util.Log;
 import android.view.View;
 import android.widget.CheckBox;
 import android.widget.EditText;
@@ -35,11 +35,12 @@ import com.cmu.scout.R;
 import com.cmu.scout.camera.BaseCameraActivity;
 import com.cmu.scout.provider.ScoutContract.Teams;
 
+@TargetApi(11)
 public class HoneyCombTeamInputActivity extends BaseCameraActivity 
 		implements PopupMenu.OnMenuItemClickListener {
 
-	private static final String TAG = "HoneyCombTeamInputActivity";
-	private static final boolean DEBUG = true;
+//	private static final String TAG = "HoneyCombTeamInputActivity";
+//	private static final boolean DEBUG = true;
 	
 	private static final int ACTION_TAKE_PHOTO_CODE = 1;
 	
@@ -222,19 +223,19 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
 		int bridge = (mToggleBridge.isChecked()) ? 1:0;
 		
 		String rank_s = mRank.getText().toString();
-		int rank = (rank_s == null || rank_s.length() == 0) ? -1 : new Integer(rank_s);
+		int rank = (rank_s == null || rank_s.length() == 0) ? -1 : Integer.valueOf(rank_s);
 		
 		String position = "";
 		if (mCheckLeft.isChecked()) position += "1";
 		if (mCheckMiddle.isChecked()) position += "2";
 		if (mCheckRight.isChecked()) position += "3";
-		int p_n = (position == null || position.length() == 0) ? 0 : new Integer(position);
+		int p_n = (position == null || position.length() == 0) ? 0 : Integer.valueOf(position);
 		
 		String shoot = "";
 		if (mCheckFender.isChecked()) shoot += "1";
 		if (mCheckKey.isChecked()) shoot += "2";
 		if (mCheckAnywhere.isChecked()) shoot += "3";
-		int s_n = (shoot == null || shoot.length() == 0) ? 0 : new Integer(shoot);
+		int s_n = (shoot == null || shoot.length() == 0) ? 0 : Integer.valueOf(shoot);
 		
 		
 		final Uri uri = Teams.buildTeamIdUri(""+mTeamId);
@@ -287,26 +288,24 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
 	
 	// popup menu for take photo
     public void onPhotoClick(View view){
-    	Log.v(TAG, "onPhotoClick()");
+//    	if (DEBUG) Log.v(TAG, "onPhotoClick()");
     	
-    	//if (Build.VERSION.SDK_INT >= Build.VERSION_CODES.HONEYCOMB) {
-    		PopupMenu popup = new PopupMenu(this, view);		
-    	
-    		final boolean cameraAvailable = isCameraAvailable(this, CAMERA_ACTION)
-    				&& isIntentAvailable(this, "android.media.action.IMAGE_CAPTURE");
-		
-    		popup.getMenuInflater().inflate(R.menu.team_photo_popup_menu, popup.getMenu());
-		
-    		// add only if the device has the camera application installed
-    		popup.setOnMenuItemClickListener(this);
-    		popup.getMenu().findItem(R.id.team_take_photo).setEnabled(cameraAvailable);
-    		popup.show();
-    	//}
+    	PopupMenu popup = new PopupMenu(this, view);		
+
+    	final boolean cameraAvailable = isCameraAvailable(this, CAMERA_ACTION)
+    			&& isIntentAvailable(this, "android.media.action.IMAGE_CAPTURE");
+
+    	popup.getMenuInflater().inflate(R.menu.team_photo_popup_menu, popup.getMenu());
+
+    	// add only if the device has the camera application installed
+    	popup.setOnMenuItemClickListener(this);
+    	popup.getMenu().findItem(R.id.team_take_photo).setEnabled(cameraAvailable);
+    	popup.show();
     }
     
     @Override
     public boolean onMenuItemClick(android.view.MenuItem item) {   
-    	Log.v(TAG, "onMenuItemClick()");
+//    	if (DEBUG) Log.v(TAG, "onMenuItemClick()");
     	switch (item.getItemId()) {
     	case R.id.team_take_photo:
 			mCurrentPhotoPath = null;
@@ -327,7 +326,7 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
     }
     
 	private void dispatchTakePictureIntent(int actionCode, int teamId) {
-		if (DEBUG) Log.v(TAG, "dispatchTakePictureIntent()");
+//		if (DEBUG) Log.v(TAG, "dispatchTakePictureIntent()");
 
 		final Intent takePicture = new Intent(MediaStore.ACTION_IMAGE_CAPTURE);
 
@@ -357,21 +356,19 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
 	}
 	
 	private File createImageFile() throws IOException {
-		if (DEBUG) Log.v(TAG, "createImageFile()");
+//		if (DEBUG) Log.v(TAG, "createImageFile()");
 
 		// Create an image file name
-		String timeStamp = new SimpleDateFormat("yyyyMMdd_HHmmss")
-				.format(new Date());
+		String timeStamp = new SimpleDateFormat("yyyyMMdd_HHmmss").format(new Date());
 		String imageFileName = JPEG_FILE_PREFIX + timeStamp + "_";
 		File albumF = getAlbumDir();
-		File imageF = File.createTempFile(imageFileName, JPEG_FILE_SUFFIX,
-				albumF);
+		File imageF = File.createTempFile(imageFileName, JPEG_FILE_SUFFIX, albumF);
 		mCurrentPhotoName = imageFileName;
 		return imageF;
 	}
 	
 	private void handleBigCameraPhoto() {
-		if (DEBUG) Log.v(TAG, "handleBigCameraPhoto()");
+//		if (DEBUG) Log.v(TAG, "handleBigCameraPhoto()");
 
 		if (mCurrentPhotoPath != null) {
 			scaleBitmap();
@@ -379,7 +376,7 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
 	}
 
 	private void galleryAddPic() {
-		if (DEBUG) Log.v(TAG, "galleryAddPic()");
+//		if (DEBUG) Log.v(TAG, "galleryAddPic()");
 
 		if (isIntentAvailable(this,
 				"android.intent.action.MEDIA_SCANNER_SCAN_FILE")) {
@@ -459,7 +456,7 @@ public class HoneyCombTeamInputActivity extends BaseCameraActivity
     }
 
     private void loadContactPicture() {
-    	Log.v(TAG, "loadContactPicture()");
+//    	if (DEBUG) Log.v(TAG, "loadContactPicture()");
     	
     	final Uri teamUri = Teams.buildTeamIdUri("" + mTeamId);
     	final String[] proj = { Teams.TEAM_PHOTO };
